--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </div>
             <h2 class="game--status"></h2>
             <button class="game--restart">Restart Game</button>
+            <h1 class="game--title2">AWS CI/CD Project By Vatsal Gajjar</h1>
         </section>
         <script src="script.js"></script>
     </body>
